--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Pixel Editor</string>
     <string name="let_s_create_something_new">Let\'s Create something new</string>
     <string name="image_filters">Image Filters</string>
+    <string name="filter_1">Filter 1</string>
 </resources>
